--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "private": false,
   "dependencies": {
-    "@rewind-media/rewind-protocol": "^0.1.3",
+    "@rewind-media/rewind-protocol": "^0.1.6",
     "@types/config": "^3.3.0",
     "@types/express-session": "^1.17.5",
     "@types/ffprobe": "^1.1.2",
@@ -30,7 +30,8 @@
   },
   "scripts": {
     "build": "tsc",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "pub": "npm version patch && npm publish"
   },
   "eslintConfig": {},
   "devDependencies": {
