--- a/package.json
+++ b/package.json
@@ -12,24 +12,26 @@
   },
   "private": false,
   "dependencies": {
-    "@rewind-media/rewind-protocol": "^0.1.7",
+    "@rewind-media/rewind-protocol": "^0.1.8",
     "@types/config": "^3.3.0",
     "@types/express-session": "^1.17.5",
-    "@types/ffprobe": "^1.1.2",
-    "@types/node": "^16.11.44",
-    "lodash": "^4.17.21",
+    "@types/ffprobe": "^1.1.3",
     "@types/lodash": "^4.14.186",
+    "@types/node": "^16.11.64",
     "config": "^3.3.8",
     "connect-mongo": "^4.6.0",
     "express-session": "^1.17.3",
     "ioredis": "^5.2.3",
-    "mongodb": "^4.8.0",
-    "typescript": "^4.7.4",
+    "lodash": "^4.17.21",
+    "mongodb": "^4.10.0",
+    "typescript": "^4.8.4",
     "typescript-logging": "^2.0.2",
     "typescript-logging-category-style": "^2.0.2"
   },
   "scripts": {
-    "build": "tsc",
+    "prettier": "npx prettier --write .",
+    "update": "npm update --save && git add package.json && git commit -m 'Dependency updates'",
+    "build": "npm run prettier && tsc",
     "clean": "rm -rf dist",
     "pub": "npm run clean && npm run build && npm version patch && npm publish"
   },
@@ -38,7 +40,7 @@
     "prettier": "^2.7.1"
   },
   "peerDependencies": {
-    "mongodb": "^4.8.0"
+    "mongodb": "^4.10.0"
   },
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
