--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "private": false,
   "dependencies": {
-    "@rewind-media/rewind-protocol": "^0.1.8",
+    "@rewind-media/rewind-protocol": "^0.1.9",
     "@types/config": "^3.3.0",
     "@types/express-session": "^1.17.5",
     "@types/ffprobe": "^1.1.3",
@@ -30,7 +30,7 @@
   },
   "scripts": {
     "prettier": "npx prettier --write .",
-    "update": "npm update --save && git add package.json && git commit -m 'Dependency updates'",
+    "update": "npm update --save && ((! git diff --exit-code package.json > /dev/null && git add package.json && git commit -m 'Dependency updates') || true)",
     "build": "npm run prettier && tsc",
     "clean": "rm -rf dist",
     "pub": "npm run clean && npm run build && npm version patch && npm publish"
