--- a/package.json
+++ b/package.json
@@ -12,22 +12,22 @@
   },
   "private": false,
   "dependencies": {
-    "@rewind-media/rewind-protocol": "^0.1.10",
+    "@rewind-media/rewind-protocol": "^0.1.11",
     "@types/config": "^3.3.0",
     "@types/express-session": "^1.17.5",
     "@types/ffprobe": "^1.1.3",
     "@types/lodash": "^4.14.186",
-    "@types/node": "^16.11.64",
+    "@types/node": "^16.18.3",
+    "bullmq": "^3.0.0",
     "config": "^3.3.8",
     "connect-mongo": "^4.6.0",
     "express-session": "^1.17.3",
     "ioredis": "^5.2.3",
     "lodash": "^4.17.21",
-    "mongodb": "^4.10.0",
+    "mongodb": "^4.11.0",
     "typescript": "^4.8.4",
     "typescript-logging": "^2.0.2",
-    "typescript-logging-category-style": "^2.0.2",
-    "bullmq": "^3.0.0"
+    "typescript-logging-category-style": "^2.0.2"
   },
   "scripts": {
     "prettier": "npx prettier --write .",
@@ -41,7 +41,7 @@
     "prettier": "^2.7.1"
   },
   "peerDependencies": {
-    "mongodb": "^4.10.0"
+    "mongodb": "^4.11.0"
   },
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
