--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
     "@types/config": "^3.3.0",
     "@types/express-session": "^1.17.5",
     "@types/ffprobe": "^1.1.3",
-    "@types/lodash": "^4.14.191",
-    "@types/node": "^16.18.6",
+    "@types/lodash-es": "^4.17.6",
+    "@types/node": "^16.18.10",
     "config": "^3.3.8",
     "connect-mongo": "^4.6.0",
     "durr": "^0.0.3",
     "express-session": "^1.17.3",
+    "immutable": "^4.2.1",
     "ioredis": "^5.2.4",
-    "lodash": "^4.17.21",
-    "mongodb": "^4.12.1",
+    "mongodb": "^4.13.0",
     "typescript": "^4.9.4",
     "typescript-logging": "^2.0.2",
     "typescript-logging-category-style": "^2.0.2"
@@ -41,11 +41,15 @@
     "prettier": "^2.8.1"
   },
   "peerDependencies": {
-    "mongodb": "^4.12.1"
+    "mongodb": "^4.13.0"
   },
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
     "./dist/**"
-  ]
+  ],
+  "type": "module",
+  "exports": {
+    ".": "./dist/index.js"
+  }
 }
